--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <title>Webpack</title>
   </head>
   <body>
-    <!-- <script src="index.js"></script> -->
-    <script src="../dist/main.js"></script>
+    <h1>Hola Mundo</h1>
+
+    <!-- <script src="../dist/main.js"></script> -->
   </body>
 </html>
