--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   </head>
   <body>
     <h1>Hola Mundo</h1>
-
-    <!-- <script src="../dist/main.js"></script> -->
+    <img src="assets/img/webpack-logo.png" alt="" />
   </body>
 </html>
